kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: capstone-ns1
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
